<resources>
    <string name="app_name">نقلتى</string>
    <!-- sign in-->
    <string name="number_phone">رقم التليفون</string>
    <string name="password">كلمة السر</string>
    <string name="submit">دخول</string>
    <string name="newuser">هل انت مستخدم جديد ؟ تسجيل حساب</string>
    <string name="phone_password_invalid">رقم التليفون او كلمة السر غير صحيح</string>
    <string name="user_not_found">ﻻ يوجد هذا المستخدم</string>


    <!-- sign up-->
    <string name="choose_image">اختيار صورة جديدة</string>
    <string name="confirm_password">تأكيد كلمة السر</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="register">تسجيل</string>
    <string name="invalid_confirm_password">كلمة السر غير متطابقة</string>
    <string name="invalid_user_name">برجاء ادخال اسم المستخدم</string>
    <string name="invalid_image">برجاء اختيار صورة للحساب</string>
    <string name="register_success">تم تسجيلك نجاح</string>

    <!-- show driver info -->
    <string name="driver_name">اسم السائق : </string>
    <string name="car_number">رقم السيارة : </string>
    <string name="car_type">نوع السيارة : </string>
    <string name="driver_phone">رقم تليفون السائق : </string>
    <string name="request_driver">طلب السائق </string>
    <string name="cancel_request">الغاء الطلب </string>
    <string name="request_accept">تم قبول طلبك بنجاح</string>
    <string name="request_refuse">للاسف لم يتم قبول طلبك</string>
    <string name="contact_driver">يتم الان الاتصال بالسائق برجاء الانتظاء</string>
    <string name="start_point">برجاء ادخال مكان البداية</string>
    <string name="select_myLocation">اختيار مكانى الحالى لنقطة البداية</string>
    <string name="end_point">برجاء ادخال مكان نهاية</string>

    <!-- general-->
    <string name="check_internet">من فضلك تاكد من اتصالك بالانترنت</string>
    <string name="enter_phone">من فضلك ادخل رقم تليفون صحيح </string>
    <string name="invalid_password">كلمة السر اقل من 6 حروف</string>
    <string name="error">حدث خطا ما برجاء المحاولة مرة اخرى</string>
    <string name="setting">الاعدادات</string>
    <string name="open_gps">فتح خاصية تحديد الموقع من الاعدادات</string>
    <string name="yes">موافق</string>
    <string name="no">ارفض</string>
    <string name="contact_suppoty">حدث خطا ما برجاء التحدث مع الدعم</string>
    <string name="you_want_signout">هل تريد تسجيل الخروج ؟</string>
    <string name="google_maps_key">AIzaSyDyU5o83wUPIcZ2XCW2MaRMG3rD5j84pJA</string>
    <string name="waiting">من فضلك انتظر يتم تحميل البيانات </string>


    <!--Home-->
    <string name="arrived">تم الوصول</string>
    <string name="cancel">الغاء العملية</string>

    <string name="user_cancel">تم الغاء العملية من قبل المستخدم</string>
    <string name="driver_cancel">تم الغاء العملية من قبل السائق</string>
    <string name="complete">تم اكتمال العملية بنجاح</string>
    <string name="edit">تعديل</string>
    <string name="signout">خروج</string>


    <array name="car_type_value">
        <item>ونش انقاذ</item>
        <item>كساحة</item>
        <item>لودر</item>
        <item>ربع نقل صندوق مفتوح</item>
        <item>ربع نقل صندوق مغلق</item>
        <item>ربع نقل صندوق مبرد</item>
        <item>نص نقل صندوق مفتوح</item>
        <item>نص نقل صندوق مغلق</item>
        <item>نص نقل صندوق مبرد</item>
        <item>جرار فردانى فرش</item>
        <item>جرار فردانى قلاب</item>
        <item>جرار فردانى كنتر</item>
        <item>تريلا فرش</item>
        <item>تريلا كنتر</item>
        <item>تريلا فلاب</item>
        <item>تريلا جناب</item>
        <item>تريلا مبرد</item>
        <item>تريلا تنك</item>
        <item>جرار فرش</item>
        <item>جرار كنتر</item>
        <item>جرار قلاب</item>
        <item>حفار</item>
        <item>حفار شكوش</item>
        <item>ونش موبليا</item>
        <item>معدات</item>
        <item>اتوبيس خاص</item>
        <item>اتوبيس رحلات</item>

        <item>جرار فردانى تانك</item>
        <item>نص نقل جامبو</item>
        <item>تروسيكل نقل</item>
        <item>سوزوكى نقل</item>
        <item>نقل عفش</item>
        <item>جامبو تانك</item>
    </array>
    <string name="terms"> اضغط هنا لمشاهدة شروط الاستخدام</string>
    <string name="accept_terms">موافق على شروط الاستخدام</string>

</resources>
