<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/client"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    tools:context="com.bassiouny.naqalati.activities.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/person"
            android:layout_marginTop="20dp"
            app:civ_border_color="@color/red_logo"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/ic_edit"
            android:gravity="center"
            android:id="@+id/tv_choose_image"
            android:paddingBottom="5dp"
            android:textSize="20sp"
            android:text="@string/choose_image"
            android:textColor="@color/red_logo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_edit_text"
            android:digits="0123456789"
            android:drawablePadding="5dp"
            android:id="@+id/et_phone"
            android:drawableStart="@drawable/ic_phone"
            android:hint="@string/number_phone"
            android:inputType="phone"
            android:lines="1"
            android:maxLines="1"
            android:minHeight="30dp"
            android:padding="5dp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_edit_text"
            android:drawablePadding="5dp"
            android:id="@+id/et_password"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:minHeight="30dp"
            android:padding="5dp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_edit_text"
            android:drawablePadding="5dp"
            android:id="@+id/et_confirm_password"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:minHeight="30dp"
            android:padding="5dp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_edit_text"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:lines="1"
            android:id="@+id/et_user_name"
            android:maxLines="1"
            android:minHeight="30dp"
            android:padding="5dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_edit_text"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_id"
            android:hint="رقم البطاقة"
            android:inputType="number"
            android:digits="0123456789"
            android:lines="1"
            android:id="@+id/et_user_id"
            android:maxLines="1"
            android:minHeight="30dp"
            android:padding="5dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_edit_text"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_home"
            android:hint="عنوانك الشخصى"
            android:lines="1"
            android:id="@+id/et_user_address"
            android:maxLines="1"
            android:minHeight="30dp"
            android:padding="5dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_edit_text"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="البريد الالكترونى"
            android:lines="1"
            android:id="@+id/et_user_email"
            android:maxLines="1"
            android:minHeight="30dp"
            android:padding="5dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/red_logo"
            android:layout_margin="5dp"
            android:text="البيانات التاليه للشركات"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_edit_text"
            android:drawablePadding="5dp"
            android:lines="1"
            android:hint="الملف الضريبى"
            android:id="@+id/et_tax_file"
            android:maxLines="1"
            android:minHeight="30dp"
            android:padding="5dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_edit_text"
            android:drawablePadding="5dp"
            android:hint="السجل الضريبى"
            android:lines="1"
            android:id="@+id/et_tax_record"
            android:maxLines="1"
            android:minHeight="30dp"
            android:padding="5dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ch_terms"
            android:layout_margin="5dp"
            android:text="@string/accept_terms"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_terms"
            android:textSize="18sp"
            android:textColor="@color/red_logo"
            android:layout_margin="5dp"
            android:text="@string/terms"/>
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border_button"
            android:gravity="center"
            android:id="@+id/btn_register"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
